--- a/css/main.css
+++ b/css/main.css
@@ -15,12 +15,6 @@ body {
   padding: 0;
 }
 
-img {
-  width: 100%;
-  margin: .75rem;
-  width: 2rem;
-}
-
 header {
   display: flex;
   justify-content: space-between;
@@ -34,14 +28,16 @@ header p {
   margin: 0 auto;
 }
 
-h1 {
+header h1 {
   margin: 0;
+}
+
+img {
+  width: 100%;
 }
 
 header img {
   order: -1;
-  margin-right: .5rem;
-  width: 100%;
   margin: 0 .5rem .5rem 0;
   width: 2rem;
 }
@@ -56,9 +52,9 @@ nav ul {
 
 nav a,
 nav a:visited {
- color: #0074d9;
- text-decoration: none;
- padding: .6em 1em;
+  color: #0074d9;
+  text-decoration: none;
+  padding: 75em 1em .6em;
 }
 
 a:hover {
